force-app/main/default/objects/Case/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Created By - Prateek Deshmukh
Desc - This field stores the customer account number associated with the &quot;Request a draft&quot; service request.</description>
    <label>Account Number</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>