force-app/main/default/objects/Case/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Created By - Prateek Deshmukh
Desc - This field stores the customer transfer amount linked to various categories of service requests.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>