force-app/main/default/objects/Case/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <description>Created By - Prateek Deshmukh
Desc - This field stores the appointment date for the customer&apos;s Relationship Manager (RM) meeting with a bank employee.</description>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>