force-app/main/default/objects/Case/fields/Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_Name__c</fullName>
    <description>Created By - Prateek Deshmukh
Desc - This field stores the name of the individual responsible for collecting the customer transfer amount linked to the &quot;Request a draft&quot; service request.</description>
    <label>Payee Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>