force-app/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>Created By - Prateek Deshmukh
Desc - This field stores the sub-category of the service request, allowing for efficient classification and management of customer inquiries.
Sprint stories - 3</description>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Loan​</fullName>
            </value>
            <value>
                <fullName>Car Loan​</fullName>
            </value>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Credit Card​</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>