force-app/main/default/objects/Case/recordTypes/Cards.recordType-meta.xml
<RecordType>
    <fullName>Cards</fullName>
    <active>true</active>
    <businessProcess>CB Service Request Process</businessProcess>
    <label>Cards</label>
</RecordType>