force-app/main/default/objects/Case/recordTypes/Loans.recordType-meta.xml
<RecordType>
    <fullName>Loans</fullName>
    <active>true</active>
    <businessProcess>CB Service Request Process</businessProcess>
    <label>Loans</label>
</RecordType>