force-app/main/default/objects/Case/recordTypes/Modify_Credit_Card_Limit.recordType-meta.xml
<RecordType>
    <fullName>Modify_Credit_Card_Limit</fullName>
    <active>true</active>
    <businessProcess>CB Service Request Process</businessProcess>
    <label>Modify Credit Card Limit</label>
</RecordType>