force-app/main/default/objects/Case/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <businessProcess>CB Service Request Process</businessProcess>
    <label>Other</label>
</RecordType>