force-app/main/default/objects/Case/recordTypes/Request_a_Draft.recordType-meta.xml
<RecordType>
    <fullName>Request_a_Draft</fullName>
    <active>true</active>
    <businessProcess>CB Service Request Process</businessProcess>
    <label>Request a Draft</label>
</RecordType>