force-app/main/default/objects/Case/recordTypes/Schedule_an_RM_Appointment.recordType-meta.xml
<RecordType>
    <fullName>Schedule_an_RM_Appointment</fullName>
    <active>true</active>
    <businessProcess>CB Service Request Process</businessProcess>
    <label>Schedule an RM Appointment</label>
</RecordType>