force-app/main/default/objects/Case/recordTypes/Stop_Paper_Based_Statements.recordType-meta.xml
<RecordType>
    <fullName>Stop_Paper_Based_Statements</fullName>
    <active>true</active>
    <businessProcess>CB Service Request Process</businessProcess>
    <label>Stop Paper Based Statements</label>
</RecordType>